Adjust grade flow for teacher. Implement edit logic for grades.